--- a/wallet12.html
+++ b/wallet12.html
@@ -78,7 +78,7 @@
 }
 
         h2 {
-            margin-right: 900px; /* Змініть значення від'ємного margin, щоб зсунути ліворуч */
+            margin-right: 900px; 
         }
     </style>
 </head>
@@ -145,8 +145,8 @@
 
             // Зміна кольору для відповідного span в #cryptolist
             document.querySelectorAll("#cryptolist span").forEach(span => {
-                span.style.color = "green"; // Спочатку всі на зеленому
-                span.style.fontWeight = "normal"; // Спочатку всі шрифт звичайний
+                span.style.color = "green"; 
+                span.style.fontWeight = "normal"; 
             });
 
             selectedCryptoSpan.style.color = "black"; 
